# ttyUSBSpy

./: .gitattributes  .gitlab-ci.yml  DlgttyUsbSpy.py  README.TXT  ReadMe.md  app.fil  messages.pot  mki18n.py  pyproject.toml
captures/: fagor0.pcap  fagor1.pcap  file.txt  serialDTR-DTRRTS-DTR-RTS.pcap  serialLine.pcap  usblog.pcap  usblog2013-4-5-113314pcap  usblog2013-4-5-113338.pcap  usblog2013-5-3-10376.pcap  usblog2013-5-3-10389.pcap  usblog2013-5-3-93845.pcap
core/: ttyUsbSpy.fbp  ttyUsbSpy.py  usbrevue.py  util.py
locale/en_US/LC_MESSAGES/: ttyUSBSpy.mo
locale/es_ES/LC_MESSAGES/: ttyUSBSpy.mo
ttyUSBSpy/: __main__.py
ttyUSBSpy/core/: ttyUsbSpy.py  usbrevue.py  util.py
