[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ttyUSBSpy"
readme = "ReadMe.md"
description = "a tool showing usbmon pcap captures of communications with Prolific pl2303 USB-serial converters."
authors = [{name = "kogar"}, {name = "trilobytes"}, {name = "koldo"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: OSI Approved",
	"License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["USB", "pl2303", "Prolific"]
license = {text = "GPL-3.0"}
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = [
	"wxwidgets", # https://github.com/wxWidgets/Phoenix
	"pcapy", # @ git+https://github.com/helpsystems/pcapy
]

[project.urls]
Homepage = "https://github.com/KOLANICH-mirrors/ttyUSBSpy"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["ttyUSBSpy", "ttyUSBSpy.*"]

[tool.setuptools_scm]
